kubernetes/velero/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velero
  namespace: velero
  annotations:
    argocd.argoproj.io/sync-wave: "15"
spec:
  ingressClassName: nginx
  rules:
    - host: velero.nodadyoushutup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velero
                port:
                  number: 8085
